[gd_scene load_steps=5 format=3 uid="uid://dee7j1gdlg4v6"]

[ext_resource type="Script" path="res://scripts/character_body_2d.gd" id="1_t8v76"]
[ext_resource type="Texture2D" uid="uid://cgi8cix8cp438" path="res://dialogs/PullSwitch1.png" id="2_cihu5"]
[ext_resource type="Texture2D" uid="uid://cj3vyrqgq7t53" path="res://scripts/icon.svg" id="3_nkqsa"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0qs5e"]
size = Vector2(126, 128)

[node name="CharacterBody2D" type="CharacterBody2D"]
script = ExtResource("1_t8v76")

[node name="anims" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="anims"]
position = Vector2(-2.5, -6)
scale = Vector2(8.3125, 8.58823)
texture = ExtResource("2_cihu5")

[node name="Item_equipped" type="Sprite2D" parent="anims"]
visible = false
texture = ExtResource("3_nkqsa")

[node name="character_collision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_0qs5e")

[node name="timers" type="Node2D" parent="."]

[node name="camera_transition_timing" type="Timer" parent="timers"]
wait_time = 2.0

[connection signal="timeout" from="timers/camera_transition_timing" to="." method="_on_camera_transition_timing_timeout"]
